--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
+    "express-fileupload": "^1.1.4",
     "express-session": "^1.16.1",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
