--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "express-fileupload": "^1.1.4",
     "express-session": "^1.16.1",
     "http-errors": "~1.6.3",
+    "md5": "^2.2.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.5.5",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "pug": "^2.0.3",
+    "request": "^2.88.0",
     "serve-favicon": "^2.5.0"
   }
 }
