--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport-local-mongoose": "^6.0.1",
     "pug": "^2.0.3",
     "request": "^2.88.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "async": "^3.1.1"
   }
 }
