--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^3.1.1",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
     "connect-flash": "^0.1.1",
@@ -20,12 +21,12 @@
     "mongoose": "^5.7.5",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "nodemailer": "^6.4.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "pug": "^2.0.3",
     "request": "^2.88.0",
-    "serve-favicon": "^2.5.0",
-    "async": "^3.1.1"
+    "serve-favicon": "^2.5.0"
   }
 }
