--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "debug": "~2.6.9",
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
-    "express-fileupload": "^1.1.6",
+    "express-fileupload": "^1.1.9",
     "express-session": "^1.16.1",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
@@ -27,7 +27,6 @@
     "passport-local-mongoose": "^6.0.1",
     "pug": "^2.0.3",
     "request": "^2.88.0",
-    "serve-favicon": "^2.5.0",
-    "async": "^3.1.1"
+    "serve-favicon": "^2.5.0"
   }
 }
