--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "prettify": "prettier --config .prettierrc.json --write \"**/*.js\""
   },
   "dependencies": {
     "async": "^3.1.1",
