--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.16.1",
     "gridfs-stream": "^1.1.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongodb": "^3.6.2",
     "mongoose": "^5.7.5",
