--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "forever start --append --uid dataseer-web ./bin/www",
+    "stop": "forever stop dataseer-web",
+    "list": "forever list",
     "prettify": "prettier --config .prettierrc.json --write \"**/*.js\""
   },
   "dependencies": {
@@ -17,6 +19,7 @@
     "express": "^4.16.4",
     "express-fileupload": "^1.1.9",
     "express-session": "^1.16.1",
+    "forever": "^3.0.4",
     "gridfs-stream": "^1.1.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
