--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gridfs-stream": "^1.1.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "method-override": "^3.0.0",
     "mongodb": "^3.6.2",
