--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
     "debug": "~2.6.9",
+    "docxtemplater": "^3.22.1",
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.9",
     "express-session": "^1.16.1",
-    "forever": "^3.0.4",
+    "forever": "^4.0.1",
     "gridfs-stream": "^1.1.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
@@ -34,6 +35,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
+    "pizzip": "^3.0.6",
     "pug": "^3.0.2",
     "request": "^2.88.0",
     "serve-favicon": "^2.5.0"
