--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
     "pug": "^3.0.2",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "url-join": "^4.0.1"
   },
   "description": "Repository of the dataseer-web app",
   "main": "./bin/www",
