--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "forever": "^4.0.1",
     "form-data": "^4.0.0",
     "http-errors": "~1.6.3",
+    "jsdom": "^16.7.0",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "method-override": "^3.0.0",
