--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
     "errorhandler": "^1.5.1",
     "express": "~4.16.1",
     "express-fileupload": "^1.2.1",
+    "fast-levenshtein": "^2.0.6",
     "fetch": "^1.1.0",
     "forever": "^4.0.1",
     "form-data": "^4.0.0",
+    "html-entities": "^2.3.2",
     "http-errors": "~1.6.3",
     "jsdom": "^16.7.0",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "method-override": "^3.0.0",
+    "minhash": "^0.0.9",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.14",
     "morgan": "~1.9.1",
@@ -39,7 +42,9 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
+    "pdfjs-dist": "^2.9.359",
     "pug": "^3.0.2",
+    "sbd": "^1.0.19",
     "serve-favicon": "^2.5.0",
     "url-join": "^4.0.1"
   },
