--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "express-fileupload": "^1.2.1",
     "fast-levenshtein": "^2.0.6",
     "fetch": "^1.1.0",
-    "forever": "^4.0.1",
+    "forever": "^0.14.2",
     "form-data": "^4.0.0",
+    "google-auth-library": "^7.10.0",
+    "googleapis": "^88.2.0",
     "html-entities": "^2.3.2",
     "http-errors": "~1.6.3",
     "jsdom": "^16.7.0",
