--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
+    "pdf2pic": "^2.1.4",
     "pdfjs-dist": "^2.9.359",
     "pug": "^3.0.2",
     "puppeteer": "^11.0.0",
     "sbd": "^1.0.19",
     "serve-favicon": "^2.5.0",
+    "tesseract.js": "^2.1.5",
     "url-join": "^4.0.1"
   },
   "description": "Repository of the dataseer-web app",
