--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "list": "forever list"
   },
   "dependencies": {
+    "archiver": "^5.3.0",
     "async": "^3.2.0",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.9",
