--- a/package.json
+++ b/package.json
@@ -44,8 +44,9 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
+    "pdf-lib": "^1.17.1",
     "pdf2pic": "^2.1.4",
-    "pdfjs-dist": "^2.9.359",
+    "pdfjs-dist": "^2.13.216",
     "pug": "^3.0.2",
     "puppeteer": "^11.0.0",
     "sbd": "^1.0.19",
