update : add npm run cmd

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "eslint": "./node_modules/.bin/eslint --fix controllers/api/*.js lib/*.js models/*.js models/schemas/*.js public/js/conf/*.js public/js/lib/*.js routes/api/*.js routes/gui/*.js views/**/*.js views/**/**/*.js views/**/**/**/*.js",
     "start-dev": "rm eng.traineddata;export DEV='true';node ./bin/www",
     "start": "rm eng.traineddata;forever start --append --uid dataseer-web ./bin/www",
+    "start-watchers": "forever start --append --uid dataseer-web-watchers ./scripts/watchers.js",
+    "stop-watchers": "forever stop dataseer-web-watchers",
     "stop": "forever stop dataseer-web",
     "list": "forever list"
   },
