--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "rm eng.traineddata;forever start --append --uid dataseer-web ./bin/www",
     "start-watchers": "forever start --append --uid dataseer-web-watchers ./scripts/watchers.js",
     "stop-watchers": "forever stop dataseer-web-watchers",
+    "start-watchers-dev": "node ./scripts/watchers.js",
     "stop": "forever stop dataseer-web",
     "list": "forever list"
   },
