--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "archiver": "^5.3.0",
     "async": "^3.2.0",
     "body-parser": "^1.19.0",
+    "canvas": "^2.11.0",
     "cheerio": "^1.0.0-rc.9",
     "cookie": "^0.4.0",
     "cookie-parser": "~1.4.4",
