--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cheerio": "^1.0.0-rc.9",
     "cookie": "^0.4.0",
     "cookie-parser": "~1.4.4",
+    "csv-parser": "^3.0.0",
     "date-and-time": "^1.0.1",
     "debug": "~2.6.9",
     "docx-templates": "^4.7.0",
@@ -28,6 +29,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.2.1",
     "fast-levenshtein": "^2.0.6",
+    "fontkit": "^2.0.2",
     "forever": "^4.0.1",
     "form-data": "^4.0.0",
     "google-auth-library": "^7.10.0",
