--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "eslint": "./node_modules/.bin/eslint --fix controllers/api/*.js lib/*.js models/*.js models/schemas/*.js public/js/conf/*.js public/js/lib/*.js routes/api/*.js routes/gui/*.js views/**/*.js views/**/**/*.js views/**/**/**/*.js",
-    "start-dev": "rm eng.traineddata;export LOCAL_DATATYPES='true';export DEV='true';node ./bin/www",
+    "start-dev": "rm eng.traineddata;export LOCAL_DATATYPES='true';export LOCAL_CUSTOM_SOFTWARE_LIST='true';export DEV='true';node ./bin/www",
     "start": "rm eng.traineddata;forever start --append --uid dataseer-web ./bin/www",
     "start-watchers": "forever start --append --uid dataseer-web-watchers ./scripts/watchers.js",
     "stop-watchers": "forever stop dataseer-web-watchers",
@@ -47,6 +47,7 @@
     "mongoose": "^5.12.14",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "natural": "^7.0.5",
     "node-fetch": "^2.6.7",
     "nodemailer": "^6.6.0",
     "passport": "^0.6.0",
